<resources>
    <string name="app_name">iTunesMVP</string>

    <!--    Strings related to Search Screen-->
    <string name="search_query_hint">Enter search query</string>
    <string name="text_no_search_history">Your search history is empty</string>
    <string name="show_no_internet_connection">No Internet connection</string>

    <!--    Strings related to Settings Screen-->
    <string name="app_theme">Application theme</string>
    <string name="language">Language</string>
    <string name="authentication_method">Authentication method</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="pin_code">PIN Code</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="none">None</string>
    <string name="app_version_pattern">Application version: %1s</string>
    <string name="russian">Russian</string>
    <string name="english">Английский</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>